--- a/BE/settings/setting files/settings.json
+++ b/BE/settings/setting files/settings.json
@@ -4580,7 +4580,7 @@
             "order": 32,
             "name": "★1초씩 무한★ 공격 중독",
             "created_at": "2024-12-08T20:50:23.839286",
-            "updated_at": "2024-12-25T06:20:04.475029",
+            "updated_at": "2025-01-06T07:11:59.647622",
             "trigger_key": {
                 "key_code": "숫자패드 3",
                 "modifiers": 0,
@@ -4592,8 +4592,8 @@
             "items": [
                 {
                     "type": "delay",
-                    "display_text": "지연시간 : 0.0857초",
-                    "duration": 0.0857,
+                    "display_text": "지연시간 : 0.0635초",
+                    "duration": 0.0635,
                     "order": 1
                 },
                 {
@@ -4618,8 +4618,8 @@
                 },
                 {
                     "type": "delay",
-                    "display_text": "지연시간 : 0.0857초",
-                    "duration": 0.0857,
+                    "display_text": "지연시간 : 0.0635초",
+                    "duration": 0.0635,
                     "order": 4
                 },
                 {
@@ -4644,8 +4644,8 @@
                 },
                 {
                     "type": "delay",
-                    "display_text": "지연시간 : 0.0857초",
-                    "duration": 0.0857,
+                    "display_text": "지연시간 : 0.0635초",
+                    "duration": 0.0635,
                     "order": 7
                 },
                 {
@@ -4670,34 +4670,34 @@
                 },
                 {
                     "type": "delay",
-                    "display_text": "지연시간 : 0.0857초",
-                    "duration": 0.0857,
+                    "display_text": "지연시간 : 0.0635초",
+                    "duration": 0.0635,
                     "order": 10
                 },
                 {
                     "order": 11,
-                    "display_text": "키 입력: 숫자패드 3 --- 누르기",
+                    "display_text": "키 입력: 숫자패드 5 --- 누르기",
                     "action": "누르기",
                     "type": "key_input",
-                    "key_code": "숫자패드 3",
-                    "scan_code": 81,
-                    "virtual_key": 99,
+                    "key_code": "숫자패드 5",
+                    "scan_code": 76,
+                    "virtual_key": 101,
                     "modifiers": 0
                 },
                 {
                     "order": 12,
-                    "display_text": "키 입력: 숫자패드 3 --- 떼기",
+                    "display_text": "키 입력: 숫자패드 5 --- 떼기",
                     "action": "떼기",
                     "type": "key_input",
-                    "key_code": "숫자패드 3",
-                    "scan_code": 81,
-                    "virtual_key": 99,
+                    "key_code": "숫자패드 5",
+                    "scan_code": 76,
+                    "virtual_key": 101,
                     "modifiers": 0
                 },
                 {
                     "type": "delay",
-                    "display_text": "지연시간 : 0.0857초",
-                    "duration": 0.0857,
+                    "display_text": "지연시간 : 0.0635초",
+                    "duration": 0.0635,
                     "order": 13
                 },
                 {
@@ -4722,34 +4722,34 @@
                 },
                 {
                     "type": "delay",
-                    "display_text": "지연시간 : 0.0857초",
-                    "duration": 0.0857,
+                    "display_text": "지연시간 : 0.0635초",
+                    "duration": 0.0635,
                     "order": 16
                 },
                 {
                     "order": 17,
-                    "display_text": "키 입력: 숫자패드 8 --- 누르기",
+                    "display_text": "키 입력: 숫자패드 3 --- 누르기",
                     "action": "누르기",
                     "type": "key_input",
-                    "key_code": "숫자패드 8",
-                    "scan_code": 72,
-                    "virtual_key": 104,
+                    "key_code": "숫자패드 3",
+                    "scan_code": 81,
+                    "virtual_key": 99,
                     "modifiers": 0
                 },
                 {
                     "order": 18,
-                    "display_text": "키 입력: 숫자패드 8 --- 떼기",
+                    "display_text": "키 입력: 숫자패드 3 --- 떼기",
                     "action": "떼기",
                     "type": "key_input",
-                    "key_code": "숫자패드 8",
-                    "scan_code": 72,
-                    "virtual_key": 104,
+                    "key_code": "숫자패드 3",
+                    "scan_code": 81,
+                    "virtual_key": 99,
                     "modifiers": 0
                 },
                 {
                     "type": "delay",
-                    "display_text": "지연시간 : 0.0857초",
-                    "duration": 0.0857,
+                    "display_text": "지연시간 : 0.0635초",
+                    "duration": 0.0635,
                     "order": 19
                 },
                 {
@@ -4774,9 +4774,61 @@
                 },
                 {
                     "type": "delay",
-                    "display_text": "지연시간 : 0.0857초",
-                    "duration": 0.0857,
+                    "display_text": "지연시간 : 0.0635초",
+                    "duration": 0.0635,
                     "order": 22
+                },
+                {
+                    "order": 23,
+                    "display_text": "키 입력: 숫자패드 8 --- 누르기",
+                    "action": "누르기",
+                    "type": "key_input",
+                    "key_code": "숫자패드 8",
+                    "scan_code": 72,
+                    "virtual_key": 104,
+                    "modifiers": 0
+                },
+                {
+                    "order": 24,
+                    "display_text": "키 입력: 숫자패드 8 --- 떼기",
+                    "action": "떼기",
+                    "type": "key_input",
+                    "key_code": "숫자패드 8",
+                    "scan_code": 72,
+                    "virtual_key": 104,
+                    "modifiers": 0
+                },
+                {
+                    "type": "delay",
+                    "display_text": "지연시간 : 0.0635초",
+                    "duration": 0.0635,
+                    "order": 25
+                },
+                {
+                    "order": 26,
+                    "display_text": "키 입력: 엔터 --- 누르기",
+                    "action": "누르기",
+                    "type": "key_input",
+                    "key_code": "엔터",
+                    "scan_code": 28,
+                    "virtual_key": 13,
+                    "modifiers": 0
+                },
+                {
+                    "order": 27,
+                    "display_text": "키 입력: 엔터 --- 떼기",
+                    "action": "떼기",
+                    "type": "key_input",
+                    "key_code": "엔터",
+                    "scan_code": 28,
+                    "virtual_key": 13,
+                    "modifiers": 0
+                },
+                {
+                    "type": "delay",
+                    "display_text": "지연시간 : 0.0635초",
+                    "duration": 0.0635,
+                    "order": 28
                 }
             ]
         },
@@ -10670,9 +10722,9 @@
                 {
                     "order": 3,
                     "type": "logic",
-                    "display_text": "ㄴ지연시간 9초",
+                    "display_text": "ㄴ지연시간 7.75초",
                     "logic_id": "03919966-0ce8-419f-a690-197e9e0eacf3",
-                    "logic_name": "ㄴ지연시간 9초",
+                    "logic_name": "ㄴ지연시간 7.75초",
                     "repeat_count": 1
                 },
                 {
@@ -11431,7 +11483,7 @@
             "order": 93,
             "name": "출두 -  왕궁으로",
             "created_at": "2024-12-19T18:54:30.254977",
-            "updated_at": "2025-01-05T15:29:31.696315",
+            "updated_at": "2025-01-06T06:54:12.866286",
             "trigger_key": {
                 "is_system_key": false,
                 "key_code": "등호(=)",
@@ -11678,6 +11730,32 @@
                 },
                 {
                     "order": 30,
+                    "display_text": "키 입력: 방향키 아래쪽 ↓ --- 누르기",
+                    "action": "누르기",
+                    "type": "key_input",
+                    "key_code": "방향키 아래쪽 ↓",
+                    "scan_code": 80,
+                    "virtual_key": 40,
+                    "modifiers": 0
+                },
+                {
+                    "order": 31,
+                    "display_text": "키 입력: 방향키 아래쪽 ↓ --- 떼기",
+                    "action": "떼기",
+                    "type": "key_input",
+                    "key_code": "방향키 아래쪽 ↓",
+                    "scan_code": 80,
+                    "virtual_key": 40,
+                    "modifiers": 0
+                },
+                {
+                    "type": "delay",
+                    "display_text": "지연시간 : 0.0172초",
+                    "duration": 0.0172,
+                    "order": 32
+                },
+                {
+                    "order": 33,
                     "type": "logic",
                     "display_text": "ㄴ왕궁 위로 걸어가기 10초",
                     "logic_id": "cda13f03-f1ac-456e-8fe6-516ff415ea61",
@@ -11688,17 +11766,17 @@
                     "type": "delay",
                     "display_text": "지연시간 : 0.0172초",
                     "duration": 0.0172,
-                    "order": 31
+                    "order": 34
                 }
             ]
         },
         "03919966-0ce8-419f-a690-197e9e0eacf3": {
             "order": 95,
-            "name": "ㄴ지연시간 9초",
+            "name": "ㄴ지연시간 7.75초",
             "created_at": "2024-12-19T18:54:30.254977",
-            "updated_at": "2025-01-05T16:49:30.788606",
+            "updated_at": "2025-01-06T07:16:23.435105",
             "trigger_key": null,
-            "repeat_count": 360,
+            "repeat_count": 310,
             "is_nested": true,
             "items": [
                 {
